--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "react-input-emoji": "^5.6.5",
     "react-lottie": "^1.2.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.19.0"
