--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-input-emoji": "^5.6.5",
     "react-lottie": "^1.2.3",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.19.0"
+    "react-router-dom": "^6.19.0",
+    "react-toast": "^1.0.3",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
