--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
+    "date-fns": "^3.0.6",
+    "dayjs": "^1.11.10",
     "emoji-picker-react": "^4.6.0",
     "framer-motion": "^10.17.1",
     "moment": "^2.29.4",
